--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vimeo/player": "^2.30.1",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.26",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
